政策首頁 style 調整

--- a/policies/index.html.slim
+++ b/policies/index.html.slim
@@ -5,17 +5,17 @@
 
 .content.has-sub-menu
 
-  .section-top
-    .section-inner
+  .section-list
+
+    .section-item.top
       .section-content
         .section-content-col2
           .col
-            .title.text-center 蔡英文
+            .title 蔡英文
           .col
-            .title.text-center 陳建仁
+            .title 陳建仁
 
-  .section
-    .section-inner
+    .section-item
       .section-header
         h3.headline 外觀
       .section-content
@@ -23,21 +23,20 @@
           .col
             figure.no-margin
               img src="http://www.shoreinvestmentgroup.com/wp-content/uploads/2014/07/user-icon-silhouette.png"
-              .title.text-center <strong>蔡英文</strong>
-              p.text-center 大家好我是小英
+              .title <strong>蔡英文</strong>
+              p 大家好我是小英
           .col
             figure.no-margin
               img src="http://www.shoreinvestmentgroup.com/wp-content/uploads/2014/07/user-icon-silhouette.png"
-              .title.text-center <strong>陳建仁</strong>
-              p.text-center 大家好我是大仁哥
+              .title <strong>陳建仁</strong>
+              p 大家好我是大仁哥
 
         .section-content-col1
           .col
             .title <strong>共同標題：</strong>
             p 共同欄位跨兩欄跨兩欄，共同欄位跨兩欄跨兩欄共同欄位跨兩欄跨兩欄！共同欄位跨兩欄跨兩欄。
 
-  .section
-    .section-inner
+    .section-item
       .section-header
         h3.headline 外觀描述
       .section-content
@@ -48,8 +47,7 @@
             p 描述一下兩排這個用p
             p 描述一下兩排
 
-  .section
-    .section-inner
+    .section-item
       .section-header
         h3.headline 兩欄標題內文
       .section-content
@@ -66,25 +64,18 @@
             p 第一排內文第一排內文第一排內文<br>第二排內文<br>第三排內文第三排內文<br>第四排內文第四排內文<br>第五排內文
 
 
-  .section
-    .section-inner
+    .section-item
       .section-header
-        h3.headline 內裝
+        h3.headline 政策
       .section-content
         .section-content-col1
           .col
-            p 自動對焦，採用 Focus Pixels
-            p 光學影像穩定功能 (僅限 iPhone 6s Plus)
-            p True Tone 閃光燈
-            p 全景模式 (高達 6,300 萬像素)
-            p 照片自動 HDR
-            p 曝光控制
-            p 連拍模式
-            p 計時模式
-            p ƒ/2.2 光圈
+            p <a href="http://iing.tw/policies/food_safety">食安五環改革方案</a>
+            p <a href="http://iing.tw/policies/disability_policy">身心障礙者權益政策</a>
+            p <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
+            p <a href="http://iing.tw/policies/sports_policy">體育政策</a>
 
-  .section
-    .section-inner
+    .section-item
       .section-header
         h3.headline 功能
       .section-content
