套觀光政策圖表

--- a/policies/tourism-policy.html.slim
+++ b/policies/tourism-policy.html.slim
@@ -39,16 +39,12 @@
     .center-content
       h3.section-title 觀光是經濟發展與<br>國際交流的重要關鍵
       .text-content
-        p 觀光產業，不僅是我們拓展國際交流，最平實、最深刻的方式，它同時也是台灣的生活產業、內需市場，最關鍵性的動能。這幾年，在全世界重要的觀光旅遊指標裡面，台灣的地位也逐漸提升。例如：台北曾經被票選為「亞洲最佳背包客城市」；全球最權威的旅遊指南Lonely Planet，也曾把台灣選進全球「十大最佳旅遊國家」。
+        p 觀光產業，不僅是我們拓展國際交流，最平實、最深刻的方式，它同時也是台灣的生活產業、內需市場，最關鍵性的動能。這幾年，在全世界重要的觀光旅遊指標裡面，台灣的地位也逐漸提升。例如：台北曾經被票選為「亞洲最佳背包客城市」；全球最權威的旅遊指南Lonely Planet，也曾把台灣選進全球<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">「十大最佳旅遊國家」</a>。
 
-        .multi-col-content
-          .multi-col-content-inner
-            .col-2-content
-              img.image.animation.fade-in src="/images/policies_image/tourism_policy/tp_1.png"
-            .col-2-content
-              img.image.animation.fade-in src="/images/policies_image/tourism_policy/tp_2.png"
-
-        p.text-center 資料來源：<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">Lonely Planet</a>，<a href="http://edition.cnn.com/2015/06/14/travel/world-best-food-culinary-journeys/" target="_blank">CNN</a>
+        .figure
+        h4.section-sub-title 2015 CNN 讀者票選，全球十大最佳美食旅遊點
+        .world-best-food-culinary-journeys-chart
+        p.text-center 資料來源：<a href="http://edition.cnn.com/2015/06/14/travel/world-best-food-culinary-journeys/" target="_blank">CNN</a>
 
         p 根據世界觀光旅遊委員會預測，台灣到2025年觀光生產總額將達到1兆2千億新台幣，可以創造83.3萬個就業機會。UNWTO也預測，未來十年，亞洲地區觀光客將成長102%，推估台灣觀光客將在2025年突破2千萬人。而每位觀光客對經濟的貢獻度是10個居民的消費力，台灣的觀光潛力極大。
 
@@ -79,7 +75,6 @@
           li.animation.fade-in
             h4.section-sub-title 台北以外地區交通不便，缺乏區域觀光規劃，自由行觀光客集中台北
             p 來台自由行觀光客有83%會到台北觀光，其中只有1/3會走訪其他縣市，因為台北以外地區的交通環境並不十分方便自由，國內旅行社又鮮少從事入境觀光業務，加上缺乏區域性的觀光路線整合規劃，導致全台灣只有8個縣市的到訪率超過18%，國際觀光客較少會到台北以外區域深度觀光。
-            p 有圖表待補
           li.animation.fade-in
             h4.section-sub-title 中國團客來台環島觀光路線固定，造成尖峰時間交通及景點壅塞
             p 中國是台灣觀光主要客源國，並以團客居多，但因為中國團客來台觀光路線幾乎一樣，環島一圈，造訪景點、抵達時間一樣，遊覽車在同一時間大量湧進，造成熱門景點遊憩品質不佳，鐵公路交通壅塞，不但服務設施超過負荷，觀光客也無法深度體驗。
