文化和觀光政策加入動畫

--- a/policies/culture-policy.html.slim
+++ b/policies/culture-policy.html.slim
@@ -42,13 +42,13 @@
     .center-content
       .text-content
         h3.section-title 文化，下一個新時代的關鍵動力
-        p 可惜的是，如今的文化施政仍停留在由上而下的治理模式，文化部門也常淪為政治的化妝師，侷限了文化發展的無限可能。我們必須解放新的文化想像，重新思考文化施政的核心價值，回到以人為本的起點，翻轉由上而下、權力與資源集中的舊框架，推動文化治理的民主化，進而全面厚植個人與社會的文化力，打造台灣文藝復興新時代。
+        p.animation.fade-in 可惜的是，如今的文化施政仍停留在由上而下的治理模式，文化部門也常淪為政治的化妝師，侷限了文化發展的無限可能。我們必須解放新的文化想像，重新思考文化施政的核心價值，回到以人為本的起點，翻轉由上而下、權力與資源集中的舊框架，推動文化治理的民主化，進而全面厚植個人與社會的文化力，打造台灣文藝復興新時代。
 
-        p 當下的台灣，經濟需要轉型，政治需要革新，開發主義至上的經濟發展模式已遇到瓶頸，缺乏遠見和效能不彰的政府，也已成為拖累國家進步的主因。在全球化的嚴峻挑戰下，在人民對生活、前途感到困頓的情況下，台灣正面臨歷史性的關鍵轉型時刻，而文化，是開創新時代的關鍵動力。
+        p.animation.fade-in 當下的台灣，經濟需要轉型，政治需要革新，開發主義至上的經濟發展模式已遇到瓶頸，缺乏遠見和效能不彰的政府，也已成為拖累國家進步的主因。在全球化的嚴峻挑戰下，在人民對生活、前途感到困頓的情況下，台灣正面臨歷史性的關鍵轉型時刻，而文化，是開創新時代的關鍵動力。
 
-        p 這樣的文化願景，不僅能透過培力與賦權，確保所有公民都能共享豐富的文化生活，更將為台灣下一階段的發展，奠定堅實的人文基礎，凝聚內部共識、彰顯民主彰顯、將美感與創意體驗注入教育內容，期能帶動未來經濟成功轉型。
+        p.animation.fade-in 這樣的文化願景，不僅能透過培力與賦權，確保所有公民都能共享豐富的文化生活，更將為台灣下一階段的發展，奠定堅實的人文基礎，凝聚內部共識、彰顯民主彰顯、將美感與創意體驗注入教育內容，期能帶動未來經濟成功轉型。
 
-        p 文化，當然不是經濟發展的工具，而是人們的涵養與解放。厚植文化底蘊，就是厚植台灣無窮的創造力，孕育未來生活，為居住在此的世世代代，帶來與日俱增的幸福感和國家真正的長治久安。
+        p.animation.fade-in 文化，當然不是經濟發展的工具，而是人們的涵養與解放。厚植文化底蘊，就是厚植台灣無窮的創造力，孕育未來生活，為居住在此的世世代代，帶來與日俱增的幸福感和國家真正的長治久安。
 
 
   .section-class.scroll-spy-section#section-2 data-spy-index="2"
