--- a/policies/tourism-policy.html.slim
+++ b/policies/tourism-policy.html.slim
@@ -39,18 +39,18 @@
     .center-content
       h3.section-title 觀光是經濟發展與<br>國際交流的重要關鍵
       .text-content
-        p 觀光產業，不僅是我們拓展國際交流，最平實、最深刻的方式，它同時也是台灣的生活產業、內需市場，最關鍵性的動能。這幾年，在全世界重要的觀光旅遊指標裡面，台灣的地位也逐漸提升。例如：台北曾經被票選為「亞洲最佳背包客城市」；全球最權威的旅遊指南Lonely Planet，也曾把台灣選進全球<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">「十大最佳旅遊國家」</a>。
+        p.animation.fade-in 觀光產業，不僅是我們拓展國際交流，最平實、最深刻的方式，它同時也是台灣的生活產業、內需市場，最關鍵性的動能。這幾年，在全世界重要的觀光旅遊指標裡面，台灣的地位也逐漸提升。例如：台北曾經被票選為「亞洲最佳背包客城市」；全球最權威的旅遊指南Lonely Planet，也曾把台灣選進全球<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">「十大最佳旅遊國家」</a>。
 
-        .figure
+        .figure.animation.fade-in
         h4.section-sub-title 2015 CNN 讀者票選，全球十大最佳美食旅遊點
         .world-best-food-culinary-journeys-chart
         p.text-center 資料來源：<a href="http://edition.cnn.com/2015/06/14/travel/world-best-food-culinary-journeys/" target="_blank">CNN</a>
 
-        p 根據世界觀光旅遊委員會預測，台灣到2025年觀光生產總額將達到1兆2千億新台幣，可以創造83.3萬個就業機會。UNWTO也預測，未來十年，亞洲地區觀光客將成長102%，推估台灣觀光客將在2025年突破2千萬人。而每位觀光客對經濟的貢獻度是10個居民的消費力，台灣的觀光潛力極大。
+        p.animation.fade-in 根據世界觀光旅遊委員會預測，台灣到2025年觀光生產總額將達到1兆2千億新台幣，可以創造83.3萬個就業機會。UNWTO也預測，未來十年，亞洲地區觀光客將成長102%，推估台灣觀光客將在2025年突破2千萬人。而每位觀光客對經濟的貢獻度是10個居民的消費力，台灣的觀光潛力極大。
 
-        p 觀光，是無煙囪工業、無教室的教育、無形式的外交，不僅能促進鄉村經濟，縮小城鄉差距，更是一個國家最好的外交方式，是效果立見的政策，所以各國都在強力發展觀光，增加國家與民間財富。
+        p.animation.fade-in 觀光，是無煙囪工業、無教室的教育、無形式的外交，不僅能促進鄉村經濟，縮小城鄉差距，更是一個國家最好的外交方式，是效果立見的政策，所以各國都在強力發展觀光，增加國家與民間財富。
 
-        p 全球觀光人數（尤其亞太地區）正在急速攀升，觀光已成為全球新經濟發展趨勢，也是新經濟發展的重點項目之一。而觀光將是我國內需經濟的主要支柱，也是拓展國際交流，特別是兩岸交流的最佳管道。
+        p.animation.fade-in 全球觀光人數（尤其亞太地區）正在急速攀升，觀光已成為全球新經濟發展趨勢，也是新經濟發展的重點項目之一。而觀光將是我國內需經濟的主要支柱，也是拓展國際交流，特別是兩岸交流的最佳管道。
 
   .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 困境
@@ -59,8 +59,8 @@
     .center-content
       .text-content
         h3.section-title 只注重短期數字，缺乏長遠目標
-        p 近幾年因為政府政策失當、管理不善，缺乏規劃，跟不上觀光人數的快速攀升，不但觀光經濟效益低、沒達到文化交流目的，反而造成民眾受害，加深排斥心結，友善熱情逐漸消失。尤其對於迅速增長的中國觀光客市場，缺乏正確的對策，導致亂象叢生，不但沒有帶來足夠的經濟效益，旅遊品質也變得低落。
-        p 而且，政府政策偏愛短期對策，缺乏長遠目標。缺乏規劃管理造成的交通壅塞、人潮擁擠，對環境與居民生活造成影響，風景區、生態敏感地區因為大量湧入的車輛與觀光客，造成環境汙染、生態破壞。當觀光品質引起民怨的時候，就要限制觀光人數；遇到景氣不好的時候，又要大力推動觀光。反反覆覆，讓業者無所適從，長期來看，更阻礙了台灣觀光正面、良性的發展。
+        p.animation.fade-in 近幾年因為政府政策失當、管理不善，缺乏規劃，跟不上觀光人數的快速攀升，不但觀光經濟效益低、沒達到文化交流目的，反而造成民眾受害，加深排斥心結，友善熱情逐漸消失。尤其對於迅速增長的中國觀光客市場，缺乏正確的對策，導致亂象叢生，不但沒有帶來足夠的經濟效益，旅遊品質也變得低落。
+        p.animation.fade-in 而且，政府政策偏愛短期對策，缺乏長遠目標。缺乏規劃管理造成的交通壅塞、人潮擁擠，對環境與居民生活造成影響，風景區、生態敏感地區因為大量湧入的車輛與觀光客，造成環境汙染、生態破壞。當觀光品質引起民怨的時候，就要限制觀光人數；遇到景氣不好的時候，又要大力推動觀光。反反覆覆，讓業者無所適從，長期來看，更阻礙了台灣觀光正面、良性的發展。
 
       .text-content
         h4.section-sub-title 我們目前觀察到六個較為重要的觀光困境
@@ -98,13 +98,13 @@
       .text-content
         h3.section-title 政策目標
         ul.todo-list
-          li
+          li.animation.fade-in
             h4.section-sub-title 良好的規劃管理機制
             p 面對成長快速的觀光產業，我們主張透過良好的規劃管理機制，讓觀光和永續達到平衡，才是長久之計。
-          li
+          li.animation.fade-in
             h4.section-sub-title 正確的觀光發展策略
             p 政府應該要積極有為，善用現有資源，做出正確的觀光發展策略，做好規劃及管理，把景點、環境、住宿、交通、飲食提高到國際品質，做好充分準備去應對快速增加的觀光人數、迎接2千萬觀光客的到來。
-          li
+          li.animation.fade-in
             h4.section-sub-title 營造安全友善的環境
             p 並本於友善交流的初衷，營造安全友善的環境，友善來客，讓各國觀光客，尤其是中國客，都能藉由深度體驗、文化交流，體會台灣的人情美好，進而認識台灣、愛上台灣。
 
