追加沒有RWD的兩欄樣式、沒有list-style 的ul li樣式

--- a/policies/index.html.slim
+++ b/policies/index.html.slim
@@ -38,14 +38,33 @@
 
     .section-item
       .section-header
-        h3.headline 外觀描述
+        h3.headline 有RWD兩欄
       .section-content
         .section-content-col2
           .col
-            p 這個描述適用 br 換行的這個是用 br 換行的<br>描述一下兩排描述一下兩排
+            ul.un-list
+              li 科科科科
+              li 呵呵呵呵
+              li 咩咩咩咩
           .col
-            p 描述一下兩排這個用p
-            p 描述一下兩排
+            ul.un-list
+              li 嘻嘻嘻嘻
+              li 哈哈哈哈
+
+    .section-item
+      .section-header
+        h3.headline 沒RWD兩欄
+      .section-content
+        .section-content-col2.static
+          .col
+            ul.un-list
+              li 科科科科
+              li 呵呵呵呵
+              li 咩咩咩咩
+          .col
+            ul.un-list
+              li 嘻嘻嘻嘻
+              li 哈哈哈哈
 
     .section-item
       .section-header
@@ -53,15 +72,21 @@
       .section-content
         .section-content-col2
           .col.topic
-            .title.no-margin <strong>這個是標題</strong>
+            .title <strong>這個是標題</strong>
           .col.copy
-            p 第一排內文<br>第二排內文<br>第三排內文
+            ul.un-list
+              li <a href="http://iing.tw/policies/food_safety">食安五環改革方案</a>
+              li <a href="http://iing.tw/policies/disability_policy">身心障礙者權益政策</a>
+              li <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
+              li <a href="http://iing.tw/policies/sports_policy">體育政策</a>
 
         .section-content-col2
           .col.topic
-            .title.no-margin <strong>這個是標題</strong>
+            .title <strong>這個是標題</strong>
           .col.copy
-            p 第一排內文第一排內文第一排內文<br>第二排內文<br>第三排內文第三排內文<br>第四排內文第四排內文<br>第五排內文
+            ul.un-list
+              li <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
+              li <a href="http://iing.tw/policies/sports_policy">體育政策</a>
 
 
     .section-item
@@ -70,10 +95,11 @@
       .section-content
         .section-content-col1
           .col
-            p <a href="http://iing.tw/policies/food_safety">食安五環改革方案</a>
-            p <a href="http://iing.tw/policies/disability_policy">身心障礙者權益政策</a>
-            p <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
-            p <a href="http://iing.tw/policies/sports_policy">體育政策</a>
+            ul.un-list
+              li <a href="http://iing.tw/policies/food_safety">食安五環改革方案</a>
+              li <a href="http://iing.tw/policies/disability_policy">身心障礙者權益政策</a>
+              li <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
+              li <a href="http://iing.tw/policies/sports_policy">體育政策</a>
 
     .section-item
       .section-header
@@ -81,7 +107,7 @@
       .section-content
         .section-content-col1
           .col
-            .title.no-margin <strong>很多個的列表</strong>
+            .title <strong>很多個的列表</strong>
         .section-content-col3
           .col
             ul
