--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1093,16 +1093,19 @@ body { background-color: #183840; position: relative; }
 .policies h3, .policies img { margin-bottom: 0px; }
 .policies figure { margin-bottom: 36px; }
 .policies ul { margin: 0px; font-size: 16px; line-height: 24px; }
+.policies .un-list { padding: 0px; list-style: none; }
+.policies .un-list li { margin-bottom: 6px; }
 .policies .section-list { max-width: 980px; margin: 0 auto; padding: 0 24px 24px 24px; }
 .policies .top { display: none; }
-.policies .section-item { padding-top: 24px; padding-bottom: 24px; }
+.policies .section-item { padding-top: 24px; padding-bottom: 12px; }
 .policies .section-item:after { content: ""; display: table; clear: both; }
 .policies .section-header { border-bottom: solid 1px #dddddd; }
 .policies .headline { font-size: 24px; line-height: 48px; }
+.policies .title { margin: 12px 0px; }
 .policies .section-content { margin-top: 24px; }
-.policies .section-content-col3 { margin-top: 12px; }
-.policies .title { margin: 0px; }
-@media (min-width: 640px) { .policies .section-item { position: relative; padding-top: 36px; padding-bottom: 36px; }
+.policies .section-content-col1, .policies .section-content-col2, .policies .section-content-col2 { padding-bottom: 12px; }
+.policies .static .col { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: left; width: 50%; padding: 0 24px 0 0; }
+@media (min-width: 640px) { .policies .section-item { position: relative; padding-top: 36px; padding-bottom: 24px; }
   .policies .section-item:before { content: ""; position: absolute; top: 0; left: 0; right: 0; bottom: 0; width: 100%; height: 1px; background-color: #dddddd; }
   .policies .top { display: block; padding-top: 48px; padding-bottom: 48px; }
   .policies .top:before { display: none; }
@@ -1110,6 +1113,7 @@ body { background-color: #183840; position: relative; }
   .policies .top .title { font-size: 24px; line-height: 48px; }
   .policies figure .title { display: none; }
   .policies .no-margin { margin: 0px; }
+  .policies .title { margin: 0px; }
   .policies .section-header { float: left; width: 25%; border-bottom: none; }
   .policies .section-content { float: left; width: 75%; margin: 12px 0px 0px 0px; }
   .policies .section-content-col1:after { content: ""; display: table; clear: both; }
