調整觀光政策排版

--- a/policies/tourism-policy.html.slim
+++ b/policies/tourism-policy.html.slim
@@ -29,7 +29,7 @@
       a.post-tag href="http://iing.tw/tags/策證" 觀光政策
 
   .section
-    blockquote: p「不一定要做第一，但是一定要成為唯一。」<br>台灣旅遊真正的資產，是台灣人的熱情跟生命力。所有的廟宇、古蹟、老街，每一片海岸、山巒、稻田，都因為台灣人而有溫度，因為台灣人而豐富。
+    blockquote: p「不一定要做第一，但是一定要成為唯一。」台灣旅遊真正的資產，是台灣人的熱情跟生命力。所有的廟宇、古蹟、老街，每一片海岸、山巒、稻田，都因為台灣人而有溫度，因為台灣人而豐富。
     .blockquote-name: span 蔡英文
 
   .section-class.scroll-spy-section#section-1 data-spy-index="1"
@@ -37,7 +37,7 @@
 
   .section
     .center-content
-      h3.section-title 觀光是經濟發展與<br>國際交流的重要關鍵
+      h3.section-title 觀光是經濟發展<br>與國際交流的重要關鍵
       .text-content
         p.animation.fade-in 觀光產業，不僅是我們拓展國際交流，最平實、最深刻的方式，它同時也是台灣的生活產業、內需市場，最關鍵性的動能。這幾年，在全世界重要的觀光旅遊指標裡面，台灣的地位也逐漸提升。例如：台北曾經被票選為「亞洲最佳背包客城市」；全球最權威的旅遊指南Lonely Planet，也曾把台灣選進全球<a href="http://www.lonelyplanet.com/travel-tips-and-articles/76856" target="_blank">「十大最佳旅遊國家」</a>。
 
@@ -140,7 +140,7 @@
             p 檢討旅宿法規，開放接待家庭住宿服務（Airbnb），非都市地區開放Uber乘車服務，讓利益均勻分配深入基層，讓觀光客貼近台灣鄉村、街坊、商圈、夜市，體驗台灣文化及風俗民情，進而喜歡台灣、友善台灣。（註4）
 
 
-  .section.white-block
+  .section
     .center-content
       .text-content
         h3.section-title 魅力的城市
