調整文化政策排版

--- a/policies/culture-policy.html.slim
+++ b/policies/culture-policy.html.slim
@@ -58,30 +58,7 @@
     .center-content
       .text-content
         h3.section-title 政策目標
-    .center-conten
-      img.image.animation.fade-in src="/images/policies_image/culture_policy/cp.png"
-        / ol.text-content.order-list
-        /   li.animation.fade-in
-        /     h4.section-sub-title 下而上的文化治理
-        /     p 翻轉政府角色，下放資源分配的權力，回歸專業治理，並引入參與式機制，建構藝術發展的支持體系。
-        /   li.animation.fade-in
-        /     h4.section-sub-title 全民共享的文化
-        /     p 推動文化民主化，再造文化治理的行政架構，落實文化公民權，讓所有人能夠更平等地近用文化資源。
-        /   li.animation.fade-in
-        /     h4.section-sub-title 多樣性的文化
-        /     p 揚棄對文化的獨斷詮釋，重建與再現人民與土地的共同記憶，讓多元文化相互對話激盪。
-        /   li.animation.fade-in
-        /     h4.section-sub-title 從社區出發
-        /     p 從生活的「所在」推動社會的進步，形塑在地意識，提升公民參與的文化知能與社區文化涵量。
-        /   li.animation.fade-in
-        /     h4.section-sub-title 提升文化經濟的文化涵養
-        /     p 活絡文化經濟，創造台灣特色，讓文化力帶動台灣文化產業，在劇烈的國際競爭中突圍而出。
-        /   li.animation.fade-in
-        /     h4.section-sub-title 給青年世代更豐厚的土壤
-        /     p 全面支持創意及新興的表現形式，並運用數位科技，發展文化新媒介，用開放與創新邁向新世代。
-        /   li.animation.fade-in
-        /     h4.section-sub-title 善用文化軟實力重返國際社會
-        /     p 以具台灣特色的文化創造與國際連結，運用文化外交讓世界重新認識台灣。
+        img.image.animation.fade-in src="/images/policies_image/culture_policy/cp.png"
 
   .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
@@ -93,7 +70,7 @@
   .section
     .center-content
       .text-content
-        h3.section-title 由下而上的文化治理，建構創作自由支持體系
+        h3.section-title 由下而上的文化治理，<br>建構創作自由支持體系
         img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_1.jpg"
         p.text-center <strong>翻轉政府角色，下放資源分配的權力，回歸專業治理，並引入參與式機制，建構藝術發展的支持體系。</strong>
         ul.todo-list
@@ -157,7 +134,7 @@
   .section
     .center-content
       .text-content
-        h3.section-title 重建和再現土地與人民的共同記憶，確保文化多樣性
+        h3.section-title 重建和再現土地與人民的<br>共同記憶，確保文化多樣性
         img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_3.jpg"
         p.text-center <strong>揚棄對文化的獨斷詮釋，重建與再現人民與土地的共同記憶，讓多元文化相互對話激盪。</strong>
         ul.todo-list
@@ -228,7 +205,7 @@
   .section.white-block
     .center-content
       .text-content
-        h3.section-title Culture Next開放與創新 ⇨ 新世代、新科技
+        h3.section-title Culture Next <br>開放與創新：新世代、新科技
         img.image.animation.fade-in src="/images/policies_image/culture_policy/cp_6.jpg"
         p.text-center <strong>全面支持創意及新興的表現形式，並運用數位科技，發展文化新媒介，用開放與創新邁向新世代。</strong>
         ul.todo-list
