--- a/sass/page/policies-page/_base-title.sass
+++ b/sass/page/policies-page/_base-title.sass
@@ -44,8 +44,10 @@
   .section-title
     +adjust-font-size-to(34px, 1.75)
     text-align: center
+    +trailer(2)
 
     & + .section-sub-title
+      margin-top: -24px
       +trailer(.75)
 
   .section-sub-title
