--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1135,8 +1135,8 @@ body { background-color: #183840; position: relative; }
 .policies-page .small-title { font-size: 21px; line-height: 21px; }
 @media (min-width: 640px) { .policies-page .main-title { font-size: 36px; line-height: 48px; }
   .policies-page .main-sub-title { font-size: 18px; line-height: 24px; }
-  .policies-page .section-title { font-size: 34px; line-height: 42px; text-align: center; }
-  .policies-page .section-title + .section-sub-title { margin-bottom: 18px; }
+  .policies-page .section-title { font-size: 34px; line-height: 42px; text-align: center; margin-bottom: 48px; }
+  .policies-page .section-title + .section-sub-title { margin-top: -24px; margin-bottom: 18px; }
   .policies-page .section-sub-title { margin-bottom: 24px; } }
 @media (min-width: 1025px) { .policies-page .main-title { margin-bottom: 12px; font-size: 42px; line-height: 48px; }
   .policies-page .main-title br { display: block; }
