--- a/index.html.slim
+++ b/index.html.slim
@@ -1,5 +1,4 @@
-- @page_name = "homepage"
-
+- @page_name = "homepage
 = render '/partial/hero'
 = render '/partial/header'
 = render '/partial/sub-menu'
