--- a/sass/all.scss
+++ b/sass/all.scss
@@ -47,6 +47,7 @@
 @import "partial/video-hero";
 @import "partial/video-list";
 @import "partial/header-google-search";
+@import "partial/countdown";
 
 // ==== page ====
 @import "page/homepage";
