調整台灣好政頁面 style

--- a/policies/index.html.slim
+++ b/policies/index.html.slim
@@ -36,57 +36,119 @@
             .title <strong>共同標題：</strong>
             p 共同欄位跨兩欄跨兩欄，共同欄位跨兩欄跨兩欄共同欄位跨兩欄跨兩欄！共同欄位跨兩欄跨兩欄。
 
-    .section-item
-      .section-header
-        h3.headline 有RWD兩欄
-      .section-content
-        .section-content-col2
-          .col
-            ul.un-list
-              li 科科科科
-              li 呵呵呵呵
-              li 咩咩咩咩
-          .col
-            ul.un-list
-              li 嘻嘻嘻嘻
-              li 哈哈哈哈
+    / .section-item
+    /   .section-header
+    /     h3.headline 有RWD兩欄
+    /   .section-content
+    /     .section-content-col2
+    /       .col
+    /         ul
+    /           li: a.auto-break-text 科科科科
+    /           li: a.auto-break-text 呵呵呵呵
+    /           li: a.auto-break-text 咩咩咩咩
+    /       .col
+    /         ul
+    /           li: a.auto-break-text 嘻嘻嘻嘻
+    /           li: a.auto-break-text 哈哈哈哈
+
+    / .section-item
+    /   .section-header
+    /     h3.headline 沒RWD兩欄
+    /   .section-content
+    /     .section-content-col2.static
+    /       .col
+    /         ul
+    /           li: a.auto-break-text 科科科科
+    /           li: a.auto-break-text 呵呵呵呵
+    /           li: a.auto-break-text 咩咩咩咩
+    /       .col
+    /         ul
+    /           li: a.auto-break-text 嘻嘻嘻嘻
+    /           li: a.auto-break-text 哈哈哈哈
 
     .section-item
       .section-header
-        h3.headline 沒RWD兩欄
-      .section-content
-        .section-content-col2.static
-          .col
-            ul.un-list
-              li 科科科科
-              li 呵呵呵呵
-              li 咩咩咩咩
-          .col
-            ul.un-list
-              li 嘻嘻嘻嘻
-              li 哈哈哈哈
-
-    .section-item
-      .section-header
-        h3.headline 兩欄標題內文
+        h3.headline 原住民
+        .description.auto-break-text 讓原住民族的實質自治走出第一步。
       .section-content
         .section-content-col2
           .col.topic
-            .title <strong>這個是標題</strong>
+            .title <strong>政策全文</strong>
           .col.copy
-            ul.un-list
-              li <a href="http://iing.tw/policies/food_safety">食安五環改革方案</a>
-              li <a href="http://iing.tw/policies/disability_policy">身心障礙者權益政策</a>
-              li <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
-              li <a href="http://iing.tw/policies/sports_policy">體育政策</a>
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/46" 2016總統大選蔡英文原住民族政策主張
 
         .section-content-col2
           .col.topic
-            .title <strong>這個是標題</strong>
+            .title <strong>政策談話</strong>
           .col.copy
-            ul.un-list
-              li <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
-              li <a href="http://iing.tw/policies/sports_policy">體育政策</a>
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/44" 原住民政策發表談話全文
+              li: a.auto-break-text href="http://iing.tw/posts/115" 「英派革新．原民向前」 蔡英文：讓原住民族的實質自治走出第一步
+              li: a.auto-break-text href="http://iing.tw/posts/216" 出席南區原住民族後援會成立 蔡英文：民進黨會盡最大力量 推動三大原住民族政策
+              li: a.auto-break-text href="http://iing.tw/posts/234" 花蓮萬榮鄉後援會成立 蔡英文：改進立法及資源分配，推動「建構部落長照體系」、「發展部落產業」及「使原住民族語變成生活語言」三項政策
+              li: a.auto-break-text href="http://iing.tw/posts/243" 展現奇萊山般堅定決心 蔡英文：建立原鄉長照體系、發展部落產業、復興族語教育，讓原住民族邁向實質自治
+
+
+    .section-item
+      .section-header
+        h3.headline 客家政策
+        .description.auto-break-text 重建客家人認同及光榮，創造下一個客家的美好年代。
+      .section-content
+        .section-content-col2
+          .col.topic
+            .title <strong>政策全文</strong>
+          .col.copy
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/55" 2016總統大選蔡英文客家政策主張
+        .section-content-col2
+          .col.topic
+            .title <strong>政策談話</strong>
+          .col.copy
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/45" 創造下一個客家的美好年代
+              li: a.auto-break-text href="http://iing.tw/posts/54" 重建客家人認同及光榮
+              li: a.auto-break-text href="http://iing.tw/posts/143" 國家級台三線浪漫大道啟動記者會致詞
+              li: a.auto-break-text href="http://iing.tw/posts/145" 蔡英文主席第十六屆第四十五次中常會致詞
+              li: a.auto-break-text href="http://iing.tw/posts/155" 執政後成立跨部會台三線工作小組 治理、行銷、產業 全面升級
+              li: a.auto-break-text href="http://iing.tw/posts/257" 蔡英文台北市客家後援會成立 蔡英文：執政後用心編列預算，把每一分錢好好地用，讓人民真正感受政府重視客家、關心客家
+        .section-content-col2
+          .col.topic
+            .title <strong>政策影片</strong>
+          .col.copy
+            ul
+              li: a.auto-break-text href="http://iing.tw/videos/80" 浪漫台三線
+
+    .section-item
+      .section-header
+        h3.headline 醫療政策
+        .description.auto-break-text 扭轉醫療困境，建全醫療體系。
+      .section-content
+        .section-content-col2
+          .col.topic
+            .title <strong>政策全文</strong>
+          .col.copy
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/56" 2016總統大選蔡英文醫療政策主張
+
+
+    .section-item
+      .section-header
+        h3.headline 司法改革
+        .description.auto-break-text 「人民的司法」，它必須能夠保障人權，維護人民利益；它必須擴大人民對司法的參與，不再高高在上；它必須專業、透明，讓人民覺得可以信賴。 「人民的司法」，它也必須擺脫威權控制的角色，遠離金錢賄賂的腐化，並且獨立於政治與媒體之外。
+      .section-content
+        .section-content-col2
+          .col.topic
+            .title <strong>政策全文</strong>
+          .col.copy
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/65" 2016總統大選蔡英文司法改革政策主張
+        .section-content-col2
+          .col.topic
+            .title <strong>政策談話</strong>
+          .col.copy
+            ul
+              li: a.auto-break-text href="http://iing.tw/posts/64" 讓司法回歸「屬於人民的司法」
 
 
     .section-item
@@ -95,11 +157,11 @@
       .section-content
         .section-content-col1
           .col
-            ul.un-list
-              li <a href="http://iing.tw/policies/food_safety">食安五環改革方案</a>
-              li <a href="http://iing.tw/policies/disability_policy">身心障礙者權益政策</a>
-              li <a href="http://iing.tw/policies/fssp">五大社會安定計畫</a>
-              li <a href="http://iing.tw/policies/sports_policy">體育政策</a>
+            ul
+              li: a.auto-break-text href="http://iing.tw/policies/food_safety" 食安五環改革方案
+              li: a.auto-break-text href="http://iing.tw/policies/disability_policy" 身心障礙者權益政策
+              li: a.auto-break-text href="http://iing.tw/policies/fssp" 五大社會安定計畫
+              li: a.auto-break-text href="http://iing.tw/policies/sports_policy" 體育政策
 
     .section-item
       .section-header
@@ -111,16 +173,16 @@
         .section-content-col3
           .col
             ul
-              li 第一個
-              li 第二個
-              li 第三個
+              li: a.auto-break-text.auto-break-text 第一個
+              li: a.auto-break-text 第二個
+              li: a.auto-break-text 第三個
           .col
             ul
-              li 第四個
-              li 第五個
-              li 第六個
+              li: a.auto-break-text 第四個
+              li: a.auto-break-text 第五個
+              li: a.auto-break-text 第六個
           .col
             ul
-              li 第七個
-              li 第八個
-              li 第九個
+              li: a.auto-break-text 第七個
+              li: a.auto-break-text 第八個
+              li: a.auto-break-text 第九個
